--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,6 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Rohit Raut
+  description: Student
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -27,11 +26,14 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
+  platforms:
+  - name: Fedora
+    versions:
+     - all
+  - name: RHEL
+    version:
+     - all
+  - name: Debian
   # - name: SomePlatform
   #   versions:
   #   - all
@@ -39,7 +41,11 @@ galaxy_info:
   #   - 7
   #   - 99.99
 
-  galaxy_tags: []
+  galaxy_tags:
+    - Jenkins
+    - Debian
+    - RHEL
+    - Fedora
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
