--- a/meta/main.yml
+++ b/meta/main.yml
@@ -42,10 +42,10 @@ galaxy_info:
   #   - 99.99
 
   galaxy_tags:
-    - Jenkins
-    - Debian
-    - RHEL
-    - Fedora
+    - jenkins
+    - debian
+    - rhel
+    - fedora
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
@@ -56,4 +56,3 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
-  
