--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -10,6 +10,6 @@ rpackage:
        description: "Jenkin package repository"
     key: "https://pkg.jenkins.io/redhat-stable/jenkins.io.key"
 
-rsoftware:
+RedHat_software:
     java: "{{ java }}"
     jenkins: "{{ jenkins }}"
